# TheoryOfAlg_lab1

./: CMakeLists.txt  key1  key1.pub
diagrams/Main/: bfs.puml  buildBacktrackingTrail.puml
diagrams/Maze/: findCharPointInMap.puml  getColumnAmount.puml  getFinishPoint.puml  getNeighborhoods.puml  getRowAmount.puml  getStartPoint.puml  isNeighborhood.puml  isStartOrFinishPoint.puml  isValid.puml  isValid__for__point_t.puml  operator[].puml  printMaze.puml
include/: Maze.h  MyTest.h  Queue.h  test.h
src/: Maze.cpp  main.cpp
test/: test.h
